# Decenza

./: .gitignore  ACCESSIBILITY_IMPROVEMENTS.md  AGENTS.md  BACKUP_REFACTOR_PROPOSAL.md  CLAUDE.md  CMakeLists.txt  DFLOW.md  PRIVACY.md  RASPBERRY_PI.md  README.md  REFACTORING_COMPLETE.md  SHOT_HISTORY.md  build.sh  claude.md  de1-qt.qrc  decenza.desktop  timerFix.md
.agent/workflows/: opsx-archive.md
.claude/commands/: review.md
.cursor/commands/: opsx-archive.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: android-release.yml  emoji-pin-check.yml  ios-release.yml  (+11 more)
android/: AndroidManifest.xml  AndroidManifest.xml.in  build.gradle
cmake/: ApplyVersionCode.cmake  CopyVersionedAAB.cmake  IncrementBuildNumber.cmake  IncrementVersionCode.cmake  tsnet.cmake
docs/: ACCESSIBILITY.md  AI_ADVISOR.md  AUTO_FLOW_CALIBRATION.md  CPP_COMPLIANCE_AUDIT.md  DE1_BLE_PROTOCOL.md  ESPRESSO_DIAL_IN_REFERENCE.md  HOME_AUTOMATION.md  IOS_CI_FOR_CLAUDE.md  IOS_CI_SETUP.md  IOS_TESTFLIGHT_SETUP.md  ISSUE_TRIAGE.md  MCP_SERVER.md  MCP_TEST_PLAN.md  MMR_WRITES_COMPARISON.md  PROFILE_KNOWLEDGE_BASE.md  SHOT_HISTORY.md  SHOT_REVIEW.md  SHOT_REVIEW_IMPROVEMENTS.md  SMART_BATTERY_CHARGING.md  UI_COMPLIANCE_AUDIT.md  UI_COMPLIANCE_TEST_PLAN.md  UNIVERSAL_GRIND_SETTING.md
installer/: TEMPLATE_setupvars.iss  setup.iss  version.iss  version.iss.in
ios/: Info.plist  MachineStatusWidgetBridge.mm  PrivacyInfo.xcprivacy  inject_widget_extension.rb
macos/: AppIcon.icns  Decenza_DE1.entitlements  Info.plist
obsidian-plugin/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
openspec/: AGENTS.md  config.yaml  project.md
qml/: Theme.qml  main.qml
resources/: ai.qrc  emoji.qrc  grinder_aliases.json  profiles.qrc  resources.qrc
scripts/: check_font_family_literals.py  check_font_glyph_coverage.py  check_translated_richtext.py  check_translation_key_conflicts.py  compare_profiles.py  download_emoji.py  mcp_bridge.py  measure_warnings.py  sync_profiles.py  test_mcp.sh
shaders/: crt.frag
src/: main.cpp  version.h.in  version_code.cpp.in
tests/: CMakeLists.txt  asan_canary.cpp  lint_failonwarning.cmake  run_sanitizer_canary.cmake  sanitizer_canary.cpp  shotcurvefixtures.h  tst_aborted_shot_classifier.cpp  tst_accessibility_announcements.cpp  tst_aimanager.cpp  tst_aiproviders.cpp  tst_appsettings.cpp  tst_autoflowcal.cpp  tst_autowakewindow.cpp  tst_backgroundpresets.cpp  tst_basketaliases.cpp  tst_beanbaseclient.cpp  tst_binarycodec.cpp  tst_blefidelity.cpp  tst_bleserviceerror.cpp  tst_builtinprofileformat.cpp  tst_coffeebags.cpp  tst_dbmigration.cpp  tst_dbtxn.cpp  tst_de1device_firmware.cpp  tst_de1device_headless.cpp  tst_de1device_mmrreads.cpp  tst_decentcalibration.cpp  tst_decentscalewifi.cpp  tst_decenzaprovisioning.cpp  tst_dialing_blocks.cpp  tst_dialing_helpers.cpp  tst_difluidr1.cpp  tst_difluidr2.cpp  tst_drinktypes.cpp  tst_emojiassets.cpp  tst_equipment.cpp  tst_exifdate.cpp  tst_firmwareassetcachehelpers.cpp  tst_firmwareheader.cpp  tst_firmwarepackets.cpp  (+67 more)
tools/: calib_analysis.py  profile_sync.cpp  rename_bundled_font.py  validate_kb.py
(+1852 files in other folders)
